unpackaged/main/default/objects/rh2__PS_Queue__c/rh2__PS_Queue__c.object-meta.xml
<CustomObject>
    <description>Management of asynchronous processing in Rollup Helper.</description>
    <label>Rollup Queue</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Rollup Helper Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>