unpackaged/main/default/objects/rh2__PS_Queue__c/fields/rh2__Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>rh2__Batch_Class__c</fullName>
    <label>Batch Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>