unpackaged/main/default/objects/rh2__PS_Queue__c/fields/rh2__Max_Record_Scope__c.field-meta.xml
<CustomField>
    <fullName>rh2__Max_Record_Scope__c</fullName>
    <label>Max Record Scope</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>