unpackaged/main/default/objects/rh2__PS_Queue__c/fields/rh2__Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>rh2__Notification_Email__c</fullName>
    <label>Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>