unpackaged/main/default/objects/rh2__PS_Queue__c/fields/rh2__Source_Object__c.field-meta.xml
<CustomField>
    <fullName>rh2__Source_Object__c</fullName>
    <label>Source Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>