unpackaged/main/default/objects/rh2__PS_Queue__c/fields/rh2__Step_JSON__c.field-meta.xml
<CustomField>
    <fullName>rh2__Step_JSON__c</fullName>
    <label>Step JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>